--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Congreso crossway</title>
+  <meta name="Congreso crossway mty" content="Congreso de las carreras de IC, ARQ y urbanismo" />
 </head>
 <body>
 
