--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Congreso crossway</title>
+  <title>Congreso crossway mty</title>
   <meta name="Congreso crossway mty" content="Congreso de las carreras de IC, ARQ y urbanismo" />
 </head>
 <body>
 
   <h1>Pagina en construcción</h1>
-  <h1>Congreso crossway</h1>
+  <h1>Congreso crossway mty</h1>
  
 
   <img src="https://scontent.fntr4-1.fna.fbcdn.net/v/t1.0-9/10665147_821403884546464_1271347546676239177_n.png?_nc_cat=103&_nc_ht=scontent.fntr4-1.fna&oh=4db6df7bbd9e94f35fa4c7ad4ee41016&oe=5D57971A">
