--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Congreso crossway mty</title>
   <meta name="Congreso crossway mty" content="Congreso de las carreras de IC, ARQ y urbanismo" />
+  <link rel=”canonical” href=”http://crosswaymty.com.mx” />
 </head>
 <body>
 
