--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
   <h1>Pagina en construcción</h1>
   <h1>Congreso crossway mty</h1>
+  <h2>Regrese pronto - Construido por Armando Aguiar Alamilla</h2>
  
 
   <img src="https://scontent.fntr4-1.fna.fbcdn.net/v/t1.0-9/10665147_821403884546464_1271347546676239177_n.png?_nc_cat=103&_nc_ht=scontent.fntr4-1.fna&oh=4db6df7bbd9e94f35fa4c7ad4ee41016&oe=5D57971A">
-  <h2>Regrese pronto</h2>
+ 
 
 
 
