--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="white" role="navigation">
     
-    <div class="navbar-fixed">
+   
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
@@ -25,10 +25,12 @@
 
       <ul id="nav-mobile" class="sidenav rojoCrossway">
         <li><a class="white-text" href="#">Acerca de</a></li>
+        <li><a class="white-text" href="#">El equipo</a></li>
+        <li><a class="white-text" href="#">Conferencistas</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons rojoCrossway2">menu</i></a>
     </div>
-    </div>
+    
   </nav>
 
   <div id="index-banner" class="parallax-container">
@@ -55,27 +57,27 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h5 class="center">El congreso</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light">El XXVI Simposium de La Construcción, Urbanismo y Arquitectura, Crossway, tiene la misión de presentar el camino que las construcciones están tomando alrededor del mundo a través de ideas creativas y sustentables para edificaciones.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h5 class="center">¿Quienes somos?</h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light">Somos un equipo multidisciplinario de estudiantes de la univerisad privada mas prestigiosa del pais, el Tec de Monterrey.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <h5 class="center">Actividades</h5>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light">A través de conferencias, talleres y visitas.</p>
           </div>
         </div>
       </div>
@@ -110,8 +112,10 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Creado con 💙 por Armando Aguiar Alamilla
+      Creado con 💙 por Armando Aguiar Alamilla - Powered by <a href="https://github.com/armandoalamilla/Crossway">Github</a> and <a href="https://materializecss.com/">Google Materialize Design.</a>
       </div>
+
+
     </div>
   </footer>
 
