update index style

--- a/index2.html
+++ b/index2.html
@@ -15,11 +15,13 @@
     
    
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Logo</a>
+      <a id="logo-container" href="" class="brand-logo hide-on-med-and-down"> <img id="logo" src="img/logo.png"> </a>
+      <a id="logo-container" href="" class="brand-logo center hide-on-large-only "> <img id="logo_mobile" src="img/logo.png"> </a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Acerca de</a></li>
         <li><a href="#">El equipo</a></li>
         <li><a href="#">Conferencistas</a></li>
+        <li><a href="#">Comprar boletos</a></li>
 
       </ul>
 
@@ -27,6 +29,7 @@
         <li><a class="white-text" href="#">Acerca de</a></li>
         <li><a class="white-text" href="#">El equipo</a></li>
         <li><a class="white-text" href="#">Conferencistas</a></li>
+        <li><a class="white-text" href="#">Comprar boletos</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons rojoCrossway2">menu</i></a>
     </div>
@@ -112,7 +115,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Creado con 💙 por Armando Aguiar Alamilla - Powered by <a href="https://github.com/armandoalamilla/Crossway">Github</a> and <a href="https://materializecss.com/">Google Materialize Design.</a>
+      Creado con 💙 por Armando Aguiar Alamilla - Powered by <a href="https://github.com/armandoalamilla/Crossway">Github</a> and <a href="https://materializecss.com/">Google Material Design.</a>
       </div>
 
 
