--- a/index2.html
+++ b/index2.html
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="description" content="El XXVI Simposium de La Construcción, Urbanismo y Arquitectura, Crossway, tiene la misión de presentar el camino que las construcciones están tomando alrededor del mundo a través de ideas creativas y sustentables para edificaciones.">
   <title>Congreso Crossway Mty</title>
 
   <!-- CSS  -->
@@ -16,7 +17,7 @@
    
     <div class="nav-wrapper container">
       <a id="logo-container" href="" class="brand-logo hide-on-med-and-down"> <img id="logo" src="img/logo.png"> </a>
-      <a id="logo-container" href="" class="brand-logo center hide-on-large-only "> <img id="logo_mobile" src="img/logo.png"> </a>
+      <a id="logo-container" href="" class="brand-logo center hide-on-large-only"> <img id="logo_mobile" src="img/logo.png"> </a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Acerca de</a></li>
         <li><a href="#">El equipo</a></li>
