--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Creado con 💙 por Armando Aguiar Alamilla - Powered by <a href="https://github.com/armandoalamilla/Crossway">Github</a> and <a href="https://materializecss.com/">Google Material Design.</a>
+      Creado con 💙 por Armando Aguiar Alamilla <br>
+      Powered by <a href="https://github.com/armandoalamilla/Crossway">Github</a> and <a href="https://materializecss.com/">Google Material Design.</a>
       </div>
 
 
