cambios en secciones
conferencia y equipo

--- a/conferencistas.html
+++ b/conferencistas.html
@@ -41,50 +41,20 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center">Crossway MTY 2019</h1>
-        <div class="row center">
-          <h5 class="header col s12 light">Congreso de IC, ARQ y Urbanismo</h5>
-        </div>        
+        <h1 class="header center" style="font-size:10vw;">Conferencistas</h1>
+              
         
 
       </div>
     </div>
-    <div class="parallax"><img src="img/Apocada-Nuevo-Leon.jpg"></div>
+    <div class="parallax"><img src="img/conferencia.jpg"></div>
   </div>
 
 
-  <div class="container">
+   <div class="container">
     <div class="section">
 
-      <!--   Icon Section   -->
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">El congreso</h5>
-
-            <p class="light">El XXVI Simposium de La Construcción, Urbanismo y Arquitectura, Crossway, tiene la misión de presentar el camino que las construcciones están tomando alrededor del mundo a través de ideas creativas y sustentables para edificaciones.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">¿Quienes somos?</h5>
-
-            <p class="light">Somos un equipo multidisciplinario de estudiantes de la univerisad privada mas prestigiosa del pais, el Tec de Monterrey.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Actividades</h5>
-
-            <p class="light">A través de conferencias, talleres y visitas.</p>
-          </div>
-        </div>
-      </div>
+     <h3>PROXIMAMENTE MAS INFORMACION</h3>
 
     </div>
   </div>
@@ -116,7 +86,8 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Creado con 💙 por Armando Aguiar Alamilla - Powered by <a href="https://github.com/armandoalamilla/Crossway">Github</a> and <a href="https://materializecss.com/">Google Material Design.</a>
+      Creado con 💙 por Armando Aguiar Alamilla <br>
+      Powered by <a href="https://github.com/armandoalamilla/Crossway">Github</a> and <a href="https://materializecss.com/">Google Material Design.</a>
       </div>
 
 
