--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center">Crossway MTY 2019</h1>
+        <h1 class="header center" style="font-size:10vw;">Crossway MTY 2019</h1>
         <div class="row center">
-          <h5 class="header col s12 light">Congreso de IC, ARQ y Urbanismo</h5>
+          <h5 class="header col s12 light" style="font-size:5vw;">Congreso de IC, ARQ y Urbanismo</h5>
         </div>        
         
 
