--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
     
    
     <div class="nav-wrapper container">
-      <a id="logo-container" href="" class="brand-logo hide-on-med-and-down"> <img id="logo" src="img/logo.png"> </a>
-      <a id="logo-container" href="" class="brand-logo center hide-on-large-only"> <img id="logo_mobile" src="img/logo.png"> </a>
+      <a id="logo-container" href="#" class="brand-logo hide-on-med-and-down"> <img id="logo" src="img/logo.png"> </a>
+      <a id="logo-container" href="#" class="brand-logo center hide-on-large-only"> <img id="logo_mobile" src="img/logo.png"> </a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Acerca de</a></li>
-        <li><a href="#">El equipo</a></li>
-        <li><a href="#">Conferencistas</a></li>
-        <li><a href="#">Comprar boletos</a></li>
+        <li><a href="equipo.html">El equipo</a></li>
+        <li><a href="conferencistas.html">Conferencistas</a></li>
+        <li><a href="boletos.html">Comprar boletos</a></li>
 
       </ul>
 
       <ul id="nav-mobile" class="sidenav rojoCrossway">
         <li><a class="white-text" href="#">Acerca de</a></li>
-        <li><a class="white-text" href="#">El equipo</a></li>
-        <li><a class="white-text" href="#">Conferencistas</a></li>
-        <li><a class="white-text" href="#">Comprar boletos</a></li>
+        <li><a class="white-text" href="equipo.html">El equipo</a></li>
+        <li><a class="white-text" href="conferencistas.html">Conferencistas</a></li>
+        <li><a class="white-text" href="boletos.html">Comprar boletos</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons rojoCrossway2">menu</i></a>
     </div>
