--- a/boletos.html
+++ b/boletos.html
@@ -27,7 +27,7 @@
       </ul>
 
       <ul id="nav-mobile" class="sidenav rojoCrossway">
-        <a class="white-text" href="index.html">Acerca de</a></li>
+        <li><a class="white-text" href="index.html">Acerca de</a></li>
         <li><a class="white-text" href="equipo.html">El equipo</a></li>
         <li><a class="white-text" href="conferencistas.html">Conferencistas</a></li>
         <li><a class="white-text" href="#">Comprar boletos</a></li>
