cambio en la imagen

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center" style="font-size:10vw;">Crossway MTY 2019</h1>
+        <h1 class="header center" style="font-size:10vw;">Crossway MTY</h1>
         <div class="row center">
           <h5 class="header col s12 light" style="font-size:5vw;">Congreso de IC, ARQ y Urbanismo</h5>
         </div>        
@@ -49,7 +49,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="img/Apocada-Nuevo-Leon.jpg"></div>
+    <div class="parallax"><img src="img/mexico.jpg"></div>
   </div>
 
 
