update index equipo
se quito la imagen y el mty

--- a/equipo.html
+++ b/equipo.html
@@ -50,8 +50,8 @@
       </div>
     </div>
     
-    <div class="parallax hide-on-large-only"><img  src="img/IMG_4501_mobile.jpg"></div>
-    <div class="parallax hide-on-med-and-down"><img  src="img/IMG_4501.jpg"></div>
+    <div class="parallax hide-on-large-only"><img  src=""></div>
+    <div class="parallax hide-on-med-and-down"><img  src=""></div>
 
   </div>
 
