--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content="El XXVI Simposium de La Construcción, Urbanismo y Arquitectura, Crossway, tiene la misión de presentar el camino que las construcciones están tomando alrededor del mundo a través de ideas creativas y sustentables para edificaciones.">
-  <title>Congreso Crossway Mty</title>
+  <title>Crossway</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -41,9 +41,9 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center" style="font-size:10vw;">Crossway MTY</h1>
+        <h1 class="header center" style="font-size:7vw;">Crossway</h1>
         <div class="row center">
-          <h5 class="header col s12 light" style="font-size:5vw;">Congreso de IC, ARQ y Urbanismo</h5>
+          <h5 class="header col s12 light" style="font-size:3vw;">Congreso de IC, ARQ y Urbanismo</h5>
         </div>        
         
 
