--- a/equipo.html
+++ b/equipo.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <meta name="description" content="El XXVI Simposium de La Construcción, Urbanismo y Arquitectura, Crossway, tiene la misión de presentar el camino que las construcciones están tomando alrededor del mundo a través de ideas creativas y sustentables para edificaciones.">
+  <meta name="description" content="El I Simposium de La Construcción, Urbanismo y Arquitectura, Crossway, tiene la misión de presentar el camino que las construcciones están tomando alrededor del mundo a través de ideas creativas y sustentables para edificaciones.">
   <title>Congreso Crossway Mty</title>
 
   <!-- CSS  -->
@@ -50,8 +50,9 @@
       </div>
     </div>
     
-    <div class="parallax hide-on-large-only"><img  src=""></div>
-    <div class="parallax hide-on-med-and-down"><img  src=""></div>
+    <!--fotos de fondo mobile/pc-->
+    <div class="parallax hide-on-large-only"><img  src="https://images.wallpaperscraft.com/image/screen_tv_test_card_129823_2048x1152.jpg"></div>
+    <div class="parallax hide-on-med-and-down"><img  src="https://images.wallpaperscraft.com/image/screen_tv_test_card_129823_2048x1152.jpg"></div>
 
   </div>
 
