--- a/boletos.html
+++ b/boletos.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content="El I Simposium de La Construcción, Urbanismo y Arquitectura, Crossway, tiene la misión de presentar el camino que las construcciones están tomando alrededor del mundo a través de ideas creativas y sustentables para edificaciones.">
-  <title>Congreso Crossway Mty</title>
+  <title>Crossway Mty</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
