--- a/conferencistas.html
+++ b/conferencistas.html
@@ -21,6 +21,7 @@
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Acerca de</a></li>
         <li><a href="equipo.html">El equipo</a></li>
+        <li><a href="proyecto.html">El proyecto</a></li>
         <li><a href="#">Conferencistas</a></li>
         <li><a href="boletos.html">Comprar boletos</a></li>
 
@@ -29,6 +30,7 @@
       <ul id="nav-mobile" class="sidenav rojoCrossway">
         <li><a class="white-text" href="index.html">Acerca de</a></li>
         <li><a class="white-text" href="equipo.html">El equipo</a></li>
+        <li><a class="white-text" href="proyecto.html">El proyecto</a></li>
         <li><a class="white-text" href="#">Conferencistas</a></li>
         <li><a class="white-text" href="boletos.html">Comprar boletos</a></li>
       </ul>
