equipo section fixed, no more love </3

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Creado con 💙 por Armando Aguiar Alamilla <br>
+      Creado por Armando Aguiar Alamilla <br>
       Powered by <a href="https://github.com/armandoalamilla/Crossway">Github</a> and <a href="https://materializecss.com/">Google Material Design.</a>
       </div>
 
