--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
             <h2 class="center rojoCrossway2"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">El congreso</h5>
 
-            <p class="light">El I Simposium de La Construcción, Urbanismo y Arquitectura, Crossway, tiene la misión de presentar el camino que las construcciones están tomando alrededor del mundo a través de ideas creativas y sustentables para edificaciones.</p>
+            <p class="light">El primer Simposium que une las carreras de  Arquitectura, Ingeniería Civil y Urbanismo tiene la misión de presentar el camino que las construcciones 
+              están tomando alrededor del mundo a través de ideas creativas y sustentables para edificaciones.</p>
           </div>
         </div>
 
