imagen en b/n equipo

--- a/equipo.html
+++ b/equipo.html
@@ -207,13 +207,13 @@
                 <div class="col s6">
                   <span class="col s10 push-s1 black-text hide-on-med-and-down">
                      <p class="flow-text">ANA VARGAS</p>
-                     <p class="flow-text">Directora de Logistica</p>
+                     <p class="flow-text">Directora de Logística</p>
                   </span>
 
 
                   <span class="col s10  push-s4 black-text  hide-on-large-only">
                       <p class="flow-text">ANA VARGAS</p>
-                      <p class="flow-text">Directora de Logistica</p>
+                      <p class="flow-text">Directora de Logística</p>
                    </span>
                 </div>
               </div>
