--- a/boletos.html
+++ b/boletos.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 </head>
 <body>
   <nav class="white" role="navigation">
@@ -19,19 +20,17 @@
       <a id="logo-container" href="#" class="brand-logo hide-on-med-and-down"> <img id="logo" src="img/logo.png"> </a>
       <a id="logo-container" href="#" class="brand-logo center hide-on-large-only"> <img id="logo_mobile" src="img/logo.png"> </a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="index.html">Acerca de</a></li>        
-        <li><a href="proyecto.html">El proyecto</a></li>
+        <li><a href="index.html">Acerca de</a></li>   
         <li><a href="conferencistas.html">Conferencistas</a></li>
-        <li><a href="boletos.html">Comprar boletos</a></li>
+        <li><a href="boletos.html">Boletos</a></li>
         <li><a href="equipo.html">El equipo</a></li>
 
       </ul>
 
       <ul id="nav-mobile" class="sidenav rojoCrossway">
         <li><a class="white-text" href="index.html">Acerca de</a></li>
-        <li><a class="white-text" href="proyecto.html">El proyecto</a></li>
         <li><a class="white-text" href="conferencistas.html">Conferencistas</a></li>
-        <li><a class="white-text" href="boletos.html">Comprar boletos</a></li>
+        <li><a class="white-text" href="boletos.html">Boletos</a></li>
         <li><a class="white-text" href="equipo.html">El equipo</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons rojoCrossway2">menu</i></a>
@@ -39,7 +38,7 @@
     
   </nav>
 
-  <div id="index-banner" class="parallax-container">
+  <div id="index-banner" class="parallax-container animated fadeIn">
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
@@ -52,7 +51,7 @@
   </div>
 
 
-  <div class="container">
+  <div class="container animated fadeIn">
     <div class="section">
 
       
@@ -72,7 +71,7 @@
 
   
 
-  <footer id="descripcion"class="page-footer">
+  <footer id="descripcion" class="page-footer animated fadeIn">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
