--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <h2 class="center rojoCrossway2"><i class="material-icons">group</i></h2>
             <h5 class="center">¿Quienes somos?</h5>
 
-            <p class="light">Somos un equipo multidisciplinario de estudiantes de la univerisad privada mas prestigiosa del pais, el Tec de Monterrey.</p>
+            <p class="light">Somos un equipo multidisciplinario de estudiantes de una de las universidades privadas mas prestigiosas del pais, el Tec de Monterrey.</p>
           </div>
         </div>
 
