--- a/conferencistas.html
+++ b/conferencistas.html
@@ -22,6 +22,7 @@
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Acerca de</a></li>
         <li><a href="conferencistas.html">Conferencistas</a></li>
+        <li><a href="talleres.html">Talleres</a></li>
         <li><a href="boletos.html">Boletos</a></li>
         <li><a href="equipo.html">El equipo</a></li>
 
@@ -30,6 +31,7 @@
       <ul id="nav-mobile" class="sidenav rojoCrossway">
         <li><a class="white-text" href="index.html">Acerca de</a></li>
         <li><a class="white-text" href="conferencistas.html">Conferencistas</a></li>
+        <li><a class="white-text" href="talleres.html">Talleres</a></li>
         <li><a class="white-text" href="boletos.html">Boletos</a></li>
         <li><a class="white-text" href="equipo.html">El equipo</a></li>
       </ul>
