--- a/equipo.html
+++ b/equipo.html
@@ -23,6 +23,7 @@
         <li><a href="index.html">Acerca de</a></li>        
         <li><a href="conferencistas.html">Conferencistas</a></li>
         <li><a href="talleres.html">Talleres</a></li>
+        <li><a href="visitas.html">Visitas</a></li>
         <li><a href="boletos.html">Boletos</a></li>
         <li><a href="equipo.html">El equipo</a></li>
 
@@ -32,6 +33,7 @@
         <li><a class="white-text" href="index.html">Acerca de</a></li>
         <li><a class="white-text" href="conferencistas.html">Conferencistas</a></li>
         <li><a class="white-text" href="talleres.html">Talleres</a></li>
+        <li><a class="white-text" href="visitas.html">Visitas</a></li>
         <li><a class="white-text" href="boletos.html">Boletos</a></li>
         <li><a class="white-text" href="equipo.html">El equipo</a></li>
       </ul>
