--- a/visitas.html
+++ b/visitas.html
@@ -46,14 +46,14 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center" style="font-size:10vw;">Talleres</h1>      
+        <h1 class="header center" style="font-size:10vw;">Visitas</h1>      
         
 
         
 
       </div>
     </div>
-    <div class="parallax"><img src="img/workshops.jpg"></div>
+    <div class="parallax"><img src="img/construction-wallpaper.jpg"></div>
   </div>
 
   <div class="container animated fadeIn">
