--- a/talleres.html
+++ b/talleres.html
@@ -146,6 +146,20 @@
                   <p>Hora: 18:00 - 19:00</p>
                   <p>Empresa: Green Spaces by Organimuebles</p>
                   <p>Instructor: Guillermo Sada</p>
+                  <p>Descripción: Es el arte o proceso por el cual el hombre utiliza la naturaleza como herramienta para involucrar lo urbano con lo natural y así obtener espacios favorables y confortables para ayudar a los ecosistemas, la contaminación, a tener una vida más sana, limpia, con menos estrés, entre otros beneficios.
+
+                      Se verán temas como:
+                      
+                      1 Diagnóstico
+                      2 jardines en el entorno urbano
+                      3 diseño de jardín
+                      4 clases de plantas
+                      5 árboles, trasplante 
+                      6 zonas de circulación
+                      7 adaptarse al cliente
+                      8 podas de árboles
+                      9 la importancia del agua en el paisaje
+                      10 macetas para decoración</p>
                   <p>Capacidad: 30 personas</p>
                 </span></div>
               </li>
@@ -345,6 +359,20 @@
                     <p>Hora: 18:00 - 19:00</p>
                     <p>Empresa: Green Spaces by Organimuebles</p>
                     <p>Instructor: Guillermo Sada</p>
+                    <p><p>Descripción: Es el arte o proceso por el cual el hombre utiliza la naturaleza como herramienta para involucrar lo urbano con lo natural y así obtener espacios favorables y confortables para ayudar a los ecosistemas, la contaminación, a tener una vida más sana, limpia, con menos estrés, entre otros beneficios.
+
+                        Se verán temas como:
+                        
+                        1 Diagnóstico
+                        2 jardines en el entorno urbano
+                        3 diseño de jardín
+                        4 clases de plantas
+                        5 árboles, trasplante 
+                        6 zonas de circulación
+                        7 adaptarse al cliente
+                        8 podas de árboles
+                        9 la importancia del agua en el paisaje
+                        10 macetas para decoración</p></p>
                     <p>Capacidad: 30 personas</p>
                   </span></div>
                 </li>
