--- a/boletos.html
+++ b/boletos.html
@@ -58,8 +58,8 @@
   <div class="container animated fadeIn">
     <div class="section">
 
-      <h2>Paso 1: Google Forms.</h2>
-      <h5>Si vas a pagar en linea y/o ya te registraste en el Google Forms favor de omitir este paso.</h5>
+      <h2>Paso 1: Google Forms. Pago en stand y tienda virtual</h2>
+      <h5>Si vas a pagar en linea (Ticketopolis) y/o ya te registraste en el Google Forms favor de omitir este paso.</h5>
       <a class="waves-effect waves-light btn" href="https://forms.gle/paDSJSVw13H5wavY6 " target="_blank" ><i class="material-icons left">cloud</i>REGISTRO DE PARTICIPANTES</a> 
 
       <h2>Paso 2: Leer esta guia.</h2> 
