--- a/conferencistas.html
+++ b/conferencistas.html
@@ -135,7 +135,7 @@
 
         <div class="row">
           
-          <div id="conf_11" class="center-align">
+          <div id="conf_11" class="col s6">
               <img class="responsive-img" src="img/Mariana Rios.jpg">              
   
           </div>
