some last hour fixes

--- a/talleres.html
+++ b/talleres.html
@@ -149,17 +149,19 @@
                   <p>Descripción: Es el arte o proceso por el cual el hombre utiliza la naturaleza como herramienta para involucrar lo urbano con lo natural y así obtener espacios favorables y confortables para ayudar a los ecosistemas, la contaminación, a tener una vida más sana, limpia, con menos estrés, entre otros beneficios.
 
                       Se verán temas como:
-                      
-                      1 Diagnóstico
-                      2 jardines en el entorno urbano
-                      3 diseño de jardín
-                      4 clases de plantas
-                      5 árboles, trasplante 
-                      6 zonas de circulación
-                      7 adaptarse al cliente
-                      8 podas de árboles
-                      9 la importancia del agua en el paisaje
-                      10 macetas para decoración</p>
+                      <ul>
+                        <li>1 Diagnóstico</li>
+                        <li>2 jardines en el entorno urbano</li>
+                        <li>3 diseño de jardín</li>
+                        <li>4 clases de plantas</li>
+                        <li>5 árboles, trasplante</li>
+                        <li>6 zonas de circulación</li>
+                        <li>7 adaptarse al cliente</li>
+                        <li>8 podas de árboles</li>
+                        <li>9 la importancia del agua en el paisaje</li>
+                        <li>10 macetas para decoración<</li>
+                      </ul> 
+                      </p>
                   <p>Capacidad: 30 personas</p>
                 </span></div>
               </li>
@@ -363,16 +365,18 @@
 
                         Se verán temas como:
                         
-                        1 Diagnóstico
-                        2 jardines en el entorno urbano
-                        3 diseño de jardín
-                        4 clases de plantas
-                        5 árboles, trasplante 
-                        6 zonas de circulación
-                        7 adaptarse al cliente
-                        8 podas de árboles
-                        9 la importancia del agua en el paisaje
-                        10 macetas para decoración</p></p>
+                        <ul>
+                            <li>1 Diagnóstico</li>
+                            <li>2 jardines en el entorno urbano</li>
+                            <li>3 diseño de jardín</li>
+                            <li>4 clases de plantas</li>
+                            <li>5 árboles, trasplante</li>
+                            <li>6 zonas de circulación</li>
+                            <li>7 adaptarse al cliente</li>
+                            <li>8 podas de árboles</li>
+                            <li>9 la importancia del agua en el paisaje</li>
+                            <li>10 macetas para decoración<</li>
+                          </ul></p></p>
                     <p>Capacidad: 30 personas</p>
                   </span></div>
                 </li>
