--- a/visitas.html
+++ b/visitas.html
@@ -154,6 +154,13 @@
                   <div class="collapsible-header"><i class="material-icons">directions_bus</i>IKON Tower</div>
                   <div class="collapsible-body"><span>
                     <p>Empresa: ALTIUS</p>
+                    <p>Descripcion : Proyecto de 65 mil m2,
+                        10 sótanos, 3.ª excavación de mayor profundidad en México,
+                        Sistema de retención de taludes, 
+                        Estructura Postensada,
+                        Losa de supresión con concreto de alta resistencia (por primera vez usado en una losa de supresión),
+                        10 niveles sótanos y 30 niveles superiores,
+                        Etapa de colados de losa postensada</p>
                     <p>Capacidad: 14 personas</p>
                     <p>Salida de autobús: 15:15 horas</p>
                     <strong>Nota: llevar casco, chaleco y botas de seguridad.</strong>
