--- a/index.html
+++ b/index.html
@@ -99,29 +99,46 @@
     <div class="section">
         <div class="row">
 
-            <div class="col s4 animated infinite pulse">
+            <div class="col s4">
               <!-- Promo Content 1 goes here -->
               <img id="cobrex" class="responsive-img" src="img/cobrex.png">
             </div>
-            <div class="col s4 animated infinite pulse">
+            <div class="col s4">
               <!-- Promo Content 2 goes here -->
               <img id="encino" class="responsive-img" src="img/encino.png">
             </div>
-            <div class="col s4 animated infinite pulse">
+            <div class="col s4">
               <!-- Promo Content 3 goes here -->
               <img id="galvasid" class="responsive-img" src="img/Galvasid.jpg">
             </div>
 
-            <div class="col s4 animated infinite pulse">
+            <div class="col s4">
               <!-- Promo Content 1 goes here -->
               <img id="indalum" class="responsive-img " src="img/indalum.png">
             </div>
-            <div class="col s4 animated infinite pulse">
+            <div class="col s4">
               <!-- Promo Content 2 goes here -->
               <img id="interceramic" class="responsive-img" src="img/interceramic.png">
             </div>
-            <div class="col s4 animated infinite pulse">
+            <div class="col s4">
               <img id="perfiles" class="responsive-img" src="img/perfiles.png">
+            </div>
+
+            <div class="col s4">
+              <!-- Promo Content 1 goes here -->
+              <img id="indalum" class="responsive-img " src="img/CEMEX.png">
+            </div>
+            <div class="col s4">
+              <!-- Promo Content 2 goes here -->
+              <img id="interceramic" class="responsive-img" src="img/image001.png">
+            </div>
+            <div class="col s4">
+              <img id="perfiles" class="responsive-img" src="img/LOGO DEFINITIVO VERSITALIA YEY.png">
+            </div>
+
+            <div class="col s4 pull-s4">
+              <!-- Promo Content 1 goes here -->
+              <img id="indalum" class="responsive-img " src="img/LOGO_SIA_SIMPLE-1.png">
             </div>
       
           </div>
