Revert "Update talleres.html"
This reverts commit 8e4b77cf4b8358626d9246f1778b5e8ec24e1748.

--- a/talleres.html
+++ b/talleres.html
@@ -141,15 +141,28 @@
             </li>
 
             <li>
-                <div class="collapsible-header"><i class="fas fa-leaf"></i>Análisis urbano</div>
+                <div class="collapsible-header"><i class="fas fa-leaf"></i>Diseño y Ejecución de Áreas Exteriores</div>
                 <div class="collapsible-body"><span>
                   <p>Hora: 18:00 - 19:00</p>
                   <p>Empresa: Green Spaces by Organimuebles</p>
                   <p>Instructor: Guillermo Sada</p>
-                  <p>Descripción: Estrategias de análisis urbano mediante ejercicios prácticos de observación, registro y toma de evidencia que promueven la participación y la interacción con la ciudad.
+                  <p>Descripción: Es el arte o proceso por el cual el hombre utiliza la naturaleza como herramienta para involucrar lo urbano con lo natural y así obtener espacios favorables y confortables para ayudar a los ecosistemas, la contaminación, a tener una vida más sana, limpia, con menos estrés, entre otros beneficios.
+
+                      Se verán temas como:
+                      <ul>
+                        <li>1 Diagnóstico</li>
+                        <li>2 jardines en el entorno urbano</li>
+                        <li>3 diseño de jardín</li>
+                        <li>4 clases de plantas</li>
+                        <li>5 árboles, trasplante</li>
+                        <li>6 zonas de circulación</li>
+                        <li>7 adaptarse al cliente</li>
+                        <li>8 podas de árboles</li>
+                        <li>9 la importancia del agua en el paisaje</li>
+                        <li>10 macetas para decoración<</li>
+                      </ul> 
                       </p>
-                  <p>Capacidad: 25 personas</p>
-                  <strong>Nota: El taller comienza en la sala asignada, y posteriormente se realizan ejercicios prácticos en el Campus. Los asistentes deben llevar una libreta y lápiz.</strong>
+                  <p>Capacidad: 30 personas</p>
                 </span></div>
               </li>
           
